tests/error/match_error/11unsupported_pattern1.py
from guppylang import guppy

@guppy.struct
class Point:
    x: int
    y: int

@guppy
def main(p: Point) -> None:
    match p:
        case Point(x, y):
            z = 44

main.check()
